# mataLmod

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOY.md  docker-compose.yml  railway.toml  vercel.json
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_field_index_and_roadmap_progress.py
backend/app/: celery_app.py  dependencies.py  main.py
backend/app/core/: cache.py  config.py  constants.py  database.py  enums.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  career_data.py  institution.py  program.py  roadmap_progress.py  saved_program.py  scrape_run.py  sekem_formula.py  syllabus.py  user.py
backend/app/routers/: accounts.py  admin.py  advisor.py  eligibility.py  institutions.py  programs.py
backend/app/schemas/: accounts.py  advisor.py  eligibility.py  institutions.py  programs.py  sekem.py
backend/app/services/: advisor.py  sekem.py
backend/scripts/: seed_institutions.py
backend/tests/: conftest.py
backend/tests/routers/: test_advisor.py  test_eligibility.py  test_institutions.py  test_programs.py
backend/tests/services/: test_advisor_service.py  test_sekem.py
frontend/: .env.local.example  Dockerfile  jest.config.ts  jest.setup.ts  middleware.ts  next.config.mjs  next.config.ts  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/e2e/: intake-to-results.spec.ts
frontend/messages/: en.json  he.json
scraper/: Dockerfile  celery_app.py  pyproject.toml
scraper/pipeline/: publisher.py  validator.py
scraper/scrapers/: base.py  tau.py
scraper/tasks/: scrape_dispatch.py  summarize.py
scraper/tests/: conftest.py
scraper/tests/fixtures/: tau_program_detail.html  tau_program_detail_minimal.html  tau_programs_list.html
scraper/tests/scrapers/: test_tau.py
scraper/tests/tasks/: test_scrape_dispatch.py
(+54 files in other folders)
