[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mataLmod-scraper"
version = "0.1.0"
description = "MaTaLmod scraper + Celery pipeline"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Add both packages to path so scraper can import app.*
pythonpath = [".", "../backend"]

[tool.hatch.build.targets.wheel]
packages = ["scrapers", "pipeline", "tasks"]
